@@ -1,6 +1,8 @@
 # version 0.65
 2021-12-02
 - Updated VC cache.
+2021-12-03
+- Enabled listing system vc for authorized users.
 
 # version 0.64.1
 2021-10-26
